[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/game/ui/GameUI.gd" type="Script" id=2]
[ext_resource path="res://scenes/game/ui/crew/UICrewList.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/section_title.tres" type="DynamicFont" id=8]

[node name="GameUI" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
mouse_default_cursor_shape = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 768.0
mouse_filter = 2
mouse_default_cursor_shape = 9

[node name="Columns" type="HBoxContainer" parent="Container"]
margin_right = 1024.0
margin_bottom = 692.0
mouse_filter = 2
mouse_default_cursor_shape = 8
size_flags_vertical = 3

[node name="CrewList" parent="Container/Columns" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 300.0
margin_bottom = 692.0
rect_min_size = Vector2( 200, 0 )
mouse_filter = 2

[node name="Actions" type="MarginContainer" parent="Container"]
margin_top = 696.0
margin_right = 1024.0
margin_bottom = 768.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="HBoxContainer" parent="Container/Actions"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 62.0

[node name="Crew" type="Button" parent="Container/Actions/Container"]
margin_right = 81.0
margin_bottom = 52.0
toggle_mode = true
pressed = true
text = "ui_btn_crew"
align = 2

[node name="NextHour" type="Button" parent="Container/Actions/Container"]
margin_left = 85.0
margin_right = 165.0
margin_bottom = 52.0
text = "ui_btn_next"

[node name="NextEvent" type="Button" parent="Container/Actions/Container"]
margin_left = 169.0
margin_right = 270.0
margin_bottom = 52.0
toggle_mode = true
text = "ui_btn_next_10"

[node name="Stats" type="VBoxContainer" parent="Container/Actions/Container"]
margin_left = 274.0
margin_right = 1004.0
margin_bottom = 52.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Container/Actions/Container/Stats"]
margin_right = 730.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 8 )
text = "ui_game_info"

[node name="Time" type="HBoxContainer" parent="Container/Actions/Container/Stats"]
margin_top = 22.0
margin_right = 730.0
margin_bottom = 35.0

[node name="Label" type="Label" parent="Container/Actions/Container/Stats/Time"]
margin_right = 82.0
margin_bottom = 13.0
rect_min_size = Vector2( 80, 0 )
text = "ui_time_spent"
align = 1

[node name="Date" type="Label" parent="Container/Actions/Container/Stats/Time"]
margin_left = 86.0
margin_right = 186.0
margin_bottom = 13.0
rect_min_size = Vector2( 100, 0 )
text = "0"

[node name="Distance" type="HBoxContainer" parent="Container/Actions/Container/Stats"]
margin_top = 39.0
margin_right = 730.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="Container/Actions/Container/Stats/Distance"]
margin_right = 95.0
margin_bottom = 13.0
rect_min_size = Vector2( 80, 0 )
text = "ui_progress_goal"
align = 1

[node name="Progress" type="ProgressBar" parent="Container/Actions/Container/Stats/Distance"]
margin_left = 99.0
margin_right = 730.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 1
[connection signal="on_window_closed" from="Container/Columns/CrewList" to="." method="_on_UI_window_closed"]
[connection signal="on_window_opened" from="Container/Columns/CrewList" to="." method="_on_UI_window_opened"]
[connection signal="toggled" from="Container/Actions/Container/Crew" to="." method="_on_Crew_toggled"]
[connection signal="pressed" from="Container/Actions/Container/NextHour" to="." method="_on_NextHour_pressed"]
[connection signal="toggled" from="Container/Actions/Container/NextEvent" to="." method="_on_NextEvent_toggled"]
